add script for app DB

--- a/RemoteController/index.html
+++ b/RemoteController/index.html
@@ -9,7 +9,9 @@
 <body>
  <section class="remoteControllerSection">
    <div class="remoteController">
+     <button id="turnLeftButton">turn left</button>
      <button id="forwardButton">forward</button>
+     <button id="turnRightButton">turn right</button>
      <button id="leftButton">left</button>
      <button id="backButton">back</button>
      <button id="rightButton">right</button>
