change controller working logic

--- a/RemoteController/index.html
+++ b/RemoteController/index.html
@@ -18,6 +18,7 @@
    </div>
    <div class="measureDiv">
      <button id="measureCoordinatesButton">measure coordinates</button>
+     <button id="startStopMeasurementButton">START</button>
    </div>
  </section>
 <section class="fileSection">
